# daily-market-radar

./: .env.example  .gitignore  ADOPTION_LEVELS.md  AGENTS.md  AGENT_DEFINITION_MAP.md  AI_AGENT_MODEL_ADOPTION_PLAN.md  AI_PROJECT_OS_ADOPTION_PLAN.md  CHECKLIST.md  CLAUDE.md  CONTEXT_ROUTING.md  CURRENT_DECISIONS.md  CURRENT_DECISIONS_APPEND.md  CURRENT_STATE.md  DEPENDENCY_MAP.md  DEPENDENCY_MAP_FRESHRSS_INGESTION_GATE.md  EXECUTION_CHECK.md  FRESHRSS_SEEDS.md  FRESHRSS_SEEDS.opml  HIGH_LEVEL_INDEX.md  Makefile  POST_CHANGE_SYNC_ADOPTION.md  PROJECT_MAP.md  PROJECT_OS_MOUNT.md  README.md  README_AGENT_MODEL_NOTE.md  ROUTING.md  RUNBOOK.md  SOURCE_LIBRARY_SPEC.md  SYSTEM_PROMPT.md  VERIFY_AI_ANALYSIS_LINKS.md  brain.manifest.yaml  check_mount_integrity.sh  pyproject.toml
.claude/: launch.json
agent_specs/: social_channel_reader_agent.md
archive/: frozen_SYSTEM_PROMPT_2026-06-29.md
config/: ai_analysis.json  competitor_registry.json  coverage_policy.yaml  report_profiles 2.yaml  runtime_contract.json  scoring.yaml  source_registry 2.yaml  source_registry.json  source_registry.yaml  taxonomy.yaml
configs/: competitor_intelligence.yml  daily_execution_quality_gate.yml  edge_case_discovery.yml  evidence.yml  feed_discovery_stack.yml  freshrss_ingestion.yml  indicator_tracking.yml  news_freshness_and_taiwan_news.yml  niche_candidate_policy.yml  query_recipes.yml  radars.yml  search_retry_protocol.yml  source_promotion_rules.yml  source_routing_rules.yml  source_strategy.md  structural_trend_indicators.yml  technology_development.yml  triggers.yml  (+1 more)
docs/: secrets.md  (+22 more)
(+425 files in other folders)
