[project]
name = "daily-market-radar"
version = "0.2.0"
description = "Event intelligence runtime for daily-market-radar"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "jsonschema>=4.23",
]

[project.scripts]
radar = "radar.cli:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
files = ["src/radar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
